# full-stack-ai-engineer

./: .gitignore  pyproject.toml
catboost_info/: learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
projects/: chess.ipynb  student_placement.py  temp.ipynb
week10/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb
week11/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day6_colab_drive.ipynb  day6_improved.ipynb  day7.ipynb
week12/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb
week13/: day1.ipynb  day2.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7cv.ipynb  day7nlp.ipynb
week13/hf_model/: README.md
week14/: andrej-1.ipynb  andrej-2.ipynb  lab1.py  lab2.py
week15/: faiss_agentic.index  lab1.py  lab2.py  lab3.py  vector.db-wal
week2/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
week3/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
week4/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
week5/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
week6/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
week7/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
week8/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
week9/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
