[project]
name = "full-stack-ai-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.1.0",
    "catboost>=1.2.10",
    "datasets>=5.0.0",
    "imblearn>=0.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "tensorflow>=2.21.0",
    "tensorflow-keras>=0.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers[torch]>=5.12.1",
    "xgboost>=3.2.0",
]
