[project]
name = "full-stack-ai-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.1.0",
    "catboost>=1.2.10",
    "chess>=1.11.2",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "deepspeed>=0.19.2",
    "einops>=0.8.2",
    "faiss-cpu>=1.14.3",
    "imblearn>=0.0",
    "langchain>=1.3.11",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "micrograd>=0.1.0",
    "numpy>=2.4.5",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "parametric-umap>=0.2.0",
    "pinecone>=9.1.0",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "sympy>=1.14.0",
    "tensorflow>=2.21.0",
    "tensorflow-keras>=0.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers[torch]>=5.12.1",
    "xgboost>=3.2.0",
]
